--- a/assessments.html
+++ b/assessments.html
@@ -266,6 +266,10 @@ document.getElementById("saveAssessment").onclick = async () => {
 
   // ✅ Success
   document.getElementById("status").innerText = "Assessment and results saved successfully!";
+
+console.log("Selected term ID:", termId);
+
+
 };
 </script>
 </body>
