--- a/assessments.html
+++ b/assessments.html
@@ -218,7 +218,7 @@ const { data: assessment, error: assessmentError } = await supabase.from("assess
     subject_id: subjectId,
     school_id: schoolId,
     term_id: termId,
-   
+   term: termName, 
     academic_year: academicYear,
     assessment_type_id: assessmentTypeId,
     learning_area_id: subjectId,
